--- a/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Library.WebService</title>
+    <title>@ViewData["Title"] - Library</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/bookStyle.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -26,13 +27,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Library.WebService</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Library</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="Default" asp-controller="Home" asp-action="Index">Home</a></li>
                 </ul>
-                @await Html.PartialAsync("_LoginPartial")
+                @await Html.PartialAsync("~/Areas/Default/Views/Shared/_LoginPartial.cshtml")
             </div>
         </div>
     </nav>
@@ -40,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Library.WebService</p>
+            <p>&copy; 2017 - Library</p>
         </footer>
     </div>
 
