--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -11,15 +11,15 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var book in Model)
+            @*@foreach (var book in Model)
             {
                 <tr class="tr-books">
                     <td>@book.Pages</td>
-                    <td>@book.Title</td>
+                    <td>@book.BookTitle</td>
                     <td>@book.Author</td>
                     <td>@book.Year</td>
                 </tr>
-            }
+            }*@
         </tbody>
     </table>
 </div>
