--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Library.Application.Commands.AddBook.AddBookCommand>
+﻿@model IEnumerable<Library.Application.Queries.BookQuery>
 
 <div class="row first-row">
     <table class="table table-condensed">
