--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -1,25 +1,12 @@
 ﻿@model IEnumerable<Library.Application.Queries.BookQuery>
 
 <div class="row first-row">
-    <table class="table table-condensed">
-        <thead>
-            <tr class="tr-books-heading">
-                <th>Id</th>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Year</th>
-            </tr>
-        </thead>
-        <tbody>
-            @*@foreach (var book in Model)
-            {
-                <tr class="tr-books">
-                    <td>@book.Pages</td>
-                    <td>@book.BookTitle</td>
-                    <td>@book.Author</td>
-                    <td>@book.Year</td>
-                </tr>
-            }*@
-        </tbody>
-    </table>
+    <div class="col-md-2"></div>
+    <div class="col-md-8"></div>
+    @foreach (var book in Model)
+    {
+        <div class="book-row"></div>
+        <div style="height: 10px;"></div>
+    }
+    <div class="col-md-2"></div>
 </div>
