--- a/Library.Web/wwwroot/css/site.css
+++ b/Library.Web/wwwroot/css/site.css
@@ -1,6 +1,5 @@
 ﻿body {
     padding-top: 50px;
-    padding-bottom: 20px;
 }
 
 /* Wrapping element */
@@ -32,4 +31,9 @@
     .carousel-caption {
         display: none;
     }
+}
+
+footer {
+    font-weight: bold;
+    min-height: 50px;
 }
