--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@model IEnumerable<Library.Application.Queries.BookQuery>
 @{
+    <script src="~/js/admin.js"></script>
+    <link rel="stylesheet" href="~/css/bookStyle.css" />
     ViewData["Title"] = "Books";
     Layout = "~/Areas/Default/Views/Shared/_Layout.cshtml";
-    <link rel="stylesheet" href="~/css/bookStyle.css" />
 }
 
 <div class="row first-row" style="font-size: 12px;">
@@ -13,7 +14,7 @@
                 <p>
                     <div class="book-title" style="display: inline-block">@book.Id @book.BookTitle</div>
                     <a href="/Admin/Book/Delete/@book.Id" class="glyphicon glyphicon-trash" style="float:right; margin-left: 20px; font-size: 20px;"></a>
-                    <a href="/Admin/Book/Edit/@book.Id" class="glyphicon glyphicon-edit" style="float:right; font-size: 20px;"></a>
+                    <span onclick="sendEditBookCommand(@book.Id)" class="glyphicon glyphicon-edit" style="float:right; font-size: 20px;"></span>
                 </p>
                 <p>
                     <span>Author: </span>
