--- a/Library.Web/Areas/Admin/Views/Book/Add.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Add.cshtml
@@ -18,6 +18,10 @@
                 @Html.TextBoxFor(m => m.Author, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
+                @Html.LabelFor(m => m.Genre, new { @class = "add-label" })
+                @Html.TextBoxFor(m => m.Genre, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
                 @Html.LabelFor(m => m.Year, new { @class = "required add-label" })
                 @Html.TextBoxFor(m => m.Year, new { @class = "form-control add-textbox" })
             </div>
@@ -36,6 +40,10 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.Ean, new { @class = "add-label" })
                 @Html.TextBoxFor(m => m.Ean, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Description, new { @class = "add-label" })
+                @Html.TextBoxFor(m => m.Description, new { @class = "form-control add-textbox" })
             </div>
 
             <div style="margin-top: 50px;">
