--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="col-sm-6 properties-column">
                 <p>
                     <div class="book-title" style="display: inline-block">@book.Id @book.BookTitle</div>
-                    <a href="/Admin/Book/Delete/@book.Id" class="glyphicon glyphicon-trash" style="float:right; margin-left: 20px; font-size: 20px;"></a>
+                    <span onclick="sendDeleteBookCommand(@book.Id)" class="glyphicon glyphicon-trash" style="float:right; margin-left: 20px; font-size: 20px;"></span>
                     <span onclick="sendEditBookCommand(@book.Id)" class="glyphicon glyphicon-edit" style="float:right; font-size: 20px;"></span>
                 </p>
                 <p>
