--- a/Library.Web/Areas/Admin/Views/Book/Add.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Add.cshtml
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Description, new { @class = "add-label" })
-                @Html.TextBoxFor(m => m.Description, new { @class = "form-control description-add-textbox" })
+                @Html.TextAreaFor(m => m.Description, new { @class = "form-control description-add-textbox" })
             </div>
 
             <div style="margin-top: 50px;">
