--- a/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
@@ -1,1 +1,57 @@
-﻿@model 
+﻿@model Library.Application.Queries.BookQuery
+@{
+    <link rel="stylesheet" href="~/css/bookStyle.css" />
+    ViewData["Title"] = "Books";
+    Layout = "~/Areas/Default/Views/Shared/_Layout.cshtml";
+}
+
+<div class="row first-row">
+    <div class="text-center col-md-4"> MIEJSCE NA REKLAMY ( ͡° ͜ʖ ͡°) </div>
+    <div class="col-md-4">
+        @using (Html.BeginForm("Add", "Book", FormMethod.Post))
+        {
+            <div class="form-group">
+                @Html.LabelFor(m => m.BookTitle, new { @class = "required add-label" })
+                @Html.TextBoxFor(m => m.BookTitle, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Author, new { @class = "required add-label" })
+                @Html.TextBoxFor(m => m.Author, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Genre, new { @class = "add-label" })
+                @Html.TextBoxFor(m => m.Genre, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Year, new { @class = "required add-label" })
+                @Html.TextBoxFor(m => m.Year, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Pages, new { @class = "add-label" })
+                @Html.TextBoxFor(m => m.Pages, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Publisher, new { @class = "add-label" })
+                @Html.TextBoxFor(m => m.Publisher, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Isbn, new { @class = "add-label" })
+                @Html.TextBoxFor(m => m.Isbn, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Ean, new { @class = "add-label" })
+                @Html.TextBoxFor(m => m.Ean, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Description, new { @class = "add-label" })
+                @Html.TextAreaFor(m => m.Description, new { @class = "form-control description-add-textbox" })
+            </div>
+
+            <div style="margin-top: 50px;">
+                <input type="submit" value="Add book" class="btn btn-primary" style="margin-right: 70px;" />
+                @Html.ActionLink("Go back to the list", "Index", null, new { @class = "btn btn-primary back-btn" })
+            </div>
+        }
+    </div>
+    <div class="text-center col-md-4"> MIEJSCE NA REKLAMY ( ͡° ͜ʖ ͡°) </div>
+</div>
