--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<Library.Application.Queries.BookQuery>
-
 @{
     <script src="~/js/admin.js"></script>
     <link rel="stylesheet" href="~/css/bookStyle.css" />
@@ -14,7 +13,7 @@
                 <p>
                     <div class="book-title" style="display: inline-block">@book.BookTitle</div>
                     <button onclick="sendDeleteBookCommand('@book.Id')" type="button" class="btn btn-link" style="float:right; margin-left: 20px; font-size: 20px;"><span class="glyphicon glyphicon-trash"></span></button>
-                    <button onclick="sendEditBookCommand('@book.Id')" type="button" class="btn btn-link" style="float:right; font-size: 20px;"><span class="glyphicon glyphicon-edit"></span></button>
+                    <a href="/Admin/Book/Edit?Id=@book.Id" class="btn btn-link" style="float:right; font-size: 20px;"><span class="glyphicon glyphicon-edit"></span></a>
                 </p>
                 <p>
                     <span>Author: </span>
