--- a/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
@@ -8,8 +8,9 @@
 <div class="row first-row">
     <div class="text-center col-md-4"> MIEJSCE NA REKLAMY ( ͡° ͜ʖ ͡°) </div>
     <div class="col-md-4">
-        @using (Html.BeginForm("Add", "Book", FormMethod.Post))
+        @using (Html.BeginForm("Edit", "Book", FormMethod.Post))
         {
+            @Html.HiddenFor(m => m.Id);
             <div class="form-group">
                 @Html.LabelFor(m => m.BookTitle, new { @class = "required add-label" })
                 @Html.TextBoxFor(m => m.BookTitle, new { @class = "form-control add-textbox" })
@@ -48,7 +49,7 @@
             </div>
 
             <div style="margin-top: 50px;">
-                <input type="submit" value="Add book" class="btn btn-primary" style="margin-right: 70px;" />
+                <input type="submit" value="Edit book" class="btn btn-primary" style="margin-right: 70px;" />
                 @Html.ActionLink("Go back to the list", "Index", null, new { @class = "btn btn-primary back-btn" })
             </div>
         }
