--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -17,11 +17,11 @@
                 </p>
                 <p>
                     <span>Author: </span>
-                    <span class="book-span">@book.Author</span>
+                    <span class="book-span">@book.Author.LastName</span>
                 </p>
                 <p>
                     <span>Genre:</span>
-                    <span class="book-span">BookGenre</span>
+                    <span class="book-span">@book.Genre.Description</span>
                 </p>
                 <p>
                     <span>Pages: </span>
