--- a/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
@@ -16,12 +16,12 @@
                 @Html.TextBoxFor(m => m.BookTitle, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Author, new { @class = "required add-label" })
-                @Html.TextBoxFor(m => m.Author, new { @class = "form-control add-textbox" })
+                @Html.LabelFor(m => m.Author.LastName, new { @class = "required add-label" })
+                @Html.TextBoxFor(m => m.Author.LastName, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Genre, new { @class = "add-label" })
-                @Html.TextBoxFor(m => m.Genre, new { @class = "form-control add-textbox" })
+                @Html.LabelFor(m => m.Genre.Description, new { @class = "add-label" })
+                @Html.TextBoxFor(m => m.Genre.Description, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Year, new { @class = "required add-label" })
