--- a/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Library.Application.Queries.BookQuery
+﻿@model Library.Application.Queries.Books.BookQuery
 @{
     <link rel="stylesheet" href="~/css/bookStyle.css" />
     ViewData["Title"] = "Books";
