--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Library.Application.Queries.BookQuery>
+﻿@model IEnumerable<Library.Application.Queries.Books.BookQuery>
 @{
     <script src="~/js/admin.js"></script>
     <link rel="stylesheet" href="~/css/bookStyle.css" />
