--- a/Library.Web/Areas/Admin/Views/Book/Add.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model Library.Application.Commands.AddBook.AddBookCommand
+﻿@model Library.Application.Commands.Books.AddBook.AddBookCommand
 @{
     ViewData["Title"] = "Add book";
     Layout = "~/Areas/Default/Views/Shared/_Layout.cshtml";
