--- a/Library.Web/Areas/Admin/Views/Book/Add.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Add.cshtml
@@ -26,7 +26,7 @@
                 @Html.TextBoxFor(m => m.Year, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Pages, new { @class = "add-label" })
+                @Html.LabelFor(m => m.Pages, new { @class = "required add-label" })
                 @Html.TextBoxFor(m => m.Pages, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
