--- a/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Edit.cshtml
@@ -16,7 +16,7 @@
                 @Html.TextBoxFor(m => m.BookTitle, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Author.LastName, new { @class = "required add-label" })
+                @Html.LabelFor(m => m.Author, new { @class = "required add-label" })
                 @Html.TextBoxFor(m => m.Author.LastName, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
@@ -28,7 +28,7 @@
                 @Html.TextBoxFor(m => m.Year, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Pages, new { @class = "add-label" })
+                @Html.LabelFor(m => m.Pages, new { @class = "required add-label" })
                 @Html.TextBoxFor(m => m.Pages, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
