--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -5,51 +5,61 @@
     ViewData["Title"] = "Books";
     Layout = "~/Areas/Default/Views/Shared/_Layout.cshtml";
 }
-<div class="row index-first-row" style="font-size: 12px;">
-    <div class="add-book-frame">
-        <a href="/Admin/Book/Add" class="btn btn-link" style="font-size: 20px;"><span class="glyphicon glyphicon-plus"></span></a>
-    </div>
 
-    @foreach (var book in Model)
-    {
-        <div class="col-md-12 book-row" style="margin-bottom: 20px;">
-            <div class="col-sm-6 properties-column">
-                <p>
-                    <div class="book-title" style="display: inline-block">@book.BookTitle</div>
-                    <button onclick="sendDeleteBookCommand('@book.Id')" type="button" class="btn btn-link" style="float:right; margin-left: 20px; font-size: 20px;"><span class="glyphicon glyphicon-trash"></span></button>
-                    <a href="/Admin/Book/Edit?Id=@book.Id" class="btn btn-link" style="float:right; font-size: 20px;"><span class="glyphicon glyphicon-edit"></span></a>
-                </p>
-                <p>
-                    <span>Author: </span>
-                    <span class="book-span">@book.Author</span>
-                </p>
-                <p>
-                    <span>Genre:</span>
-                    <span class="book-span">@book.Genre.Description</span>
-                </p>
-                <p>
-                    <span>Pages: </span>
-                    <span class="book-span">@book.Pages</span>
-                </p>
-                <p>
-                    <span>Year: </span>
-                    <span class="book-span">@book.Year</span>
-                </p>
-                <p>
-                    <span>Publisher: </span>
-                    <span class="book-span">@book.Publisher</span>
-                </p>
-                <p>
-                    <span>EAN: </span>
-                    <span class="book-span">@book.Ean</span>
-                    <span style="margin-left: 10px;">ISBN: </span>
-                    <span class="book-span">@book.Isbn</span>
-                </p>
-                <p style="font-weight:bold;">@book.Id</p>
-            </div>
-            <div class="col-sm-6">
-                <p class="book-description">@book.Description</p>
-            </div>
+<div class="row index-first-row" style="font-size: 12px;">
+    <div class="col-lg-2 search" style="padding: 0">
+            <div class="form-group text-center" style="margin-top: 20px; margin-bottom: 20px;">
+                <label style="color: black; font-family: Georgia; font-size: 14px;">Search by title</label>
+                <input type="text" class="form-control" style="height: 20px; width:130px; display: inline-block; margin-left: 15px;"/>
+                <a href="#" class="btn btn-link" style="display:inline-block"><span class="glyphicon glyphicon-search" style="color: black; font-size: 20px;"></span></a>
         </div>
-    }
+    </div>
+    <div class="col-lg-10">
+        @foreach (var book in Model)
+        {
+            <div class="col-md-1">
+                <a href="/Admin/Book/Edit?Id=@book.Id" class="btn btn-link" style="font-size: 20px;"><span class="glyphicon glyphicon-edit"></span></a>
+                <button onclick="sendDeleteBookCommand('@book.Id')" type="button" class="btn btn-link" style="font-size: 20px;"><span class="glyphicon glyphicon-trash"></span></button>
+            </div>
+            <div class="col-md-11">
+                <div class="col-md-12 book-row" style="margin-bottom: 20px;">
+                    <div class="col-sm-7 properties-column">
+                        <p>
+                            <div class="book-title" style="display: inline-block">@book.BookTitle</div>
+                        </p>
+                        <p>
+                            <span>Author: </span>
+                            <span class="book-span">@book.Author</span>
+                        </p>
+                        <p>
+                            <span>Genre:</span>
+                            <span class="book-span">@book.Genre</span>
+                        </p>
+                        <p>
+                            <span>Pages: </span>
+                            <span class="book-span">@book.Pages</span>
+                        </p>
+                        <p>
+                            <span>Year: </span>
+                            <span class="book-span">@book.Year</span>
+                        </p>
+                        <p>
+                            <span>Publisher: </span>
+                            <span class="book-span">@book.Publisher</span>
+                        </p>
+                        <p>
+                            <span>EAN: </span>
+                            <span class="book-span">@book.Ean</span>
+                            <span style="margin-left: 10px;">ISBN: </span>
+                            <span class="book-span">@book.Isbn</span>
+                        </p>
+                        <p style="font-weight:bold;">@book.Id</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p class="book-description">@book.Description</p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
