--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -29,11 +29,11 @@
                         </p>
                         <p>
                             <span>Author: </span>
-                            <span class="book-span">@book.Author</span>
+                            <span class="book-span">@book.Author.Name</span>
                         </p>
                         <p>
                             <span>Genre:</span>
-                            <span class="book-span">@book.Genre</span>
+                            <span class="book-span">@book.Genre.Description</span>
                         </p>
                         <p>
                             <span>Pages: </span>
