--- a/Library.Web/Areas/Default/Views/ShoppingCart/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/ShoppingCart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Library.Web.Areas.Default.ViewModels.ShoppingCartViewModel
+﻿@model Library.Application.Queries.Order.OrderQuery
 @{
 }
 <script src="~/lib/jquery/dist/jquery.js" type="text/javascript"></script>
@@ -30,25 +30,23 @@
             Book Name
         </th>
         <th></th>
-    </tr>
-    @foreach (var item in  Model.CartItems)
+    </tr>@{int i = 1; }
+    @foreach (var item in  Model.Books)
     {
-        <tr id="row-@item.RecordId">
+       
+        <tr id="row-@i++">
             <td>
-                @Html.ActionLink(item.Book.BookTitle, "Details", "Store", new { id = item.BookId}, null)
+                @Html.ActionLink(item.BookTitle, "Details", "Store", new { id = item.Id}, null)
             </td>
 
             <td>
-                <a href="#" class="RemoveLink" data-id="@item.RecordId">Remove from cart</a>
+                <a href="#" class="RemoveLink" data-id="@item.Id">Remove from cart</a>
             </td>
         </tr>
     }
     <tr>
-        <td>
-            Total
-        </td>
-        <td></td>
-        <td></td>
+        <td>Books: </td>
+        <td>@Model.Books.Count()</td>
 
     </tr>
 </table>
