--- a/Library.Web/Areas/Default/Views/Shared/_Basket.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Basket.cshtml
@@ -1,7 +1,8 @@
-﻿<a class="nav navbar-nav navbar-right glyphicon btn btn-default btn-lg" href="/Default/ShoppingCart/Index">
-    <span class="glyphicon glyphicon-shopping-cart">Basket:
-    @{
-        <text> <strong id="counter">@Context.Session.Keys.Count(x => x.Contains("cart_")).ToString()</strong> @Context.Session.Keys.Count(x => x.Contains("cart_")).ToString()</text>
-    }
-    </span>
+﻿<script src="~/js/site.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<a class="nav navbar-nav navbar-right glyphicon btn btn-default btn-lg" href="/Default/ShoppingCart/Index">
+    <span class="glyphicon glyphicon-shopping-cart">Basket: <strong id="counter"></strong></span>
 </a>
+<script>
+    CountItemsInBasket();
+</script>
