--- a/Library.Web/Areas/Default/Views/ShoppingCart/Checkout.cshtml
+++ b/Library.Web/Areas/Default/Views/ShoppingCart/Checkout.cshtml
@@ -7,18 +7,24 @@
 
 @using (Html.BeginForm("Checkout", "Books", FormMethod.Post))
 {
-    <div class="form-group">
-        @Html.LabelFor(m => m.Address, new { @class = "required add-label" })
-        @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
-        @Html.TextBoxFor(m => m.Address, new { @class = "form-control add-textbox" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.PhoneNumber, new { @class = "required add-label" })
-        @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
-        @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control add-textbox" })
-    </div>
-    <div style="margin-top: 50px;">
-        <input type="submit" value="Add book" class="btn btn-primary" style="margin-right: 70px;" />
-        @Html.ActionLink("Go back to the list", "Index", null, new { @class = "btn btn-primary back-btn" })
+    <div class="col-lg-12">
+        <div class="col-md-3" style="height: 100%"></div>
+        <div class="col-md-6">
+            <p style="font-weight: bold; font-size: 20px; margin-bottom: 50px; margin-top: 30px;">Give us some details!</p>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Address, new { @class = "required add-label" })
+                @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.Address, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.PhoneNumber, new { @class = "required add-label" })
+                @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="button-wrapper" style="margin-top: 50px;">
+                <input type="submit" value="Finish" class="btn btn-primary" style="margin-right: 70px;" />
+            </div>
+        </div>
+        <div class="col-md-3"></div>
     </div>
 }
