--- a/Library.Web/Areas/Default/Views/ShoppingCart/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/ShoppingCart/Index.cshtml
@@ -1,43 +1,52 @@
 ﻿@model Library.Application.Queries.Order.OrderQuery
+@{
+    <script src="~/lib/jquery/dist/jquery.js" type="text/javascript"></script>
+}
 
-<script src="~/lib/jquery/dist/jquery.js" type="text/javascript"></script>
+<div class="col-lg-12" style="margin-top: 20px;">
+    <div class="col-md-12" style="height: 100px;">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <p class="button">
+                    <a class="btn btn-primary" style="float:right" href="/Default/ShoppingCart/Checkout">Checkout</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="col-md-2">
+    <span>Jakis content tutaj?</span>
+</div>
+<div class="col-md-10">
+    @foreach (var book in Model.Books)
+    {
+        <div class="col-md-9">
+            <div class="col-md-12 book-row" style="margin-bottom: 20px;">
+                <div class="col-sm-7 properties-column">
+                    <p>
+                        <div class="book-title" style="display: inline-block">@book.BookTitle</div>
+                    </p>
+                    <p>
+                        <span>Author: </span>
+                        <span class="book-span">@book.Author.Name</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <a onclick="sendRemoveFromCartCommand('@book.Id')" class="btn btn-link" style="font-size: 16px; margin-top: 30px;"><span class="glyphicon glyphicon-remove"></span> Remove from cart</a>
+        </div>
+    }
+</div>
+
 <script type="text/javascript">
-    function Delete(Id) {
+    function sendRemoveFromCartCommand(Id) {
         $.ajax({
-                type:"POST",
-                url: "/Default/ShoppingCart/RemoveFromCart",
-                data: JSON.stringify({ Id }),
-                contentType: "application/json",
-                dataType: 'json',
-            });
+            type: "POST",
+            url: "/Default/ShoppingCart/RemoveFromCart",
+            data: JSON.stringify({ Id }),
+            contentType: "application/json",
+            dataType: 'json',
+        });
     }
 </script>
-<p class="button">
-    @Html.ActionLink("Checkout", "Checkout", "ShoppingCart")
-</p>
-<table>
-    <tr>
-        <th>
-            Book Name
-        </th>
-        <th></th>
-    </tr>
-    @foreach (var item in Model.Books)
-    {
-
-        <tr>
-            <td>
-                @Html.ActionLink(item.BookTitle, "Details", "Books", new { id = item.Id }, null)
-            </td>
-
-            <td>
-                <a href="#" onclick="Delete('@item.Id')" class="RemoveLink">Remove from cart</a>
-            </td>
-        </tr>
-    }
-    <tr>
-        <td>Books: </td>
-        <td>@Model.Books.Count()</td>
-
-    </tr>
-</table>
