--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -22,7 +22,7 @@
                 </p>
                 <p>
                     <span>Genre:</span>
-                    <span class="book-span">@book.Genre.Description</span>
+                    <span class="book-span">@book.Genre.ToString()</span>
                 </p>
                 <p>
                     <span>Pages: </span>
