--- a/Library.Web/Areas/Admin/Views/Book/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Index.cshtml
@@ -33,7 +33,7 @@
                         </p>
                         <p>
                             <span>Genre:</span>
-                            <span class="book-span">@book.Genre.Description</span>
+                            <span class="book-span">@book.Genre</span>
                         </p>
                         <p>
                             <span>Pages: </span>
