--- a/Library.Web/Areas/Default/Views/Shared/_LoginPartial.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_LoginPartial.cshtml
@@ -20,6 +20,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
+        <li class="glyphicon glyphicon-option-vertical" style="font-size: 20px; color: gray; margin-top: 12px;"></li>
         <li><a asp-area="Default" asp-controller="Account" asp-action="Register">Register</a></li>
         <li><a asp-area="Default" asp-controller="Account" asp-action="Login">Log in</a></li>
     </ul>
