--- a/Library.Web/Areas/Default/Views/Shared/_LoginPartial.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_LoginPartial.cshtml
@@ -8,6 +8,7 @@
 {
     <form asp-area="Default" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
+            <li class="glyphicon glyphicon-option-vertical" style="font-size: 20px; color: gray; margin-top: 12px;"></li>
             <li>
                 <a asp-area="Default" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
