--- a/Library.Web/Areas/Default/Views/Shared/_Cart.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Cart.cshtml
@@ -1,7 +1,9 @@
 ﻿<script src="~/js/site.js"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <a class="nav navbar-nav navbar-inverse navbar-right" href="/Default/ShoppingCart/Index">
-    <span class="glyphicon glyphicon-shopping-cart" style="font-size: 16px;">Cart<strong id="counter"></strong></span>
+    <span class="glyphicon glyphicon-shopping-cart" style="font-size: 16px;"></span>
+    <span style="font-weight: bold;">Cart</span>
+    <strong id="counter"></strong>
 </a>
 
 <script>
