--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="col-md-1">
-                <a onclick="sendAddToCartCommand('@book.Id')" class="btn btn-link" style="font-size: 16px; margin-top: 100px;"><span class="glyphicon glyphicon-shopping-cart"></span> Add to cart</a>
+                <a onclick="SendAddToCartCommand('@book.Id')" class="btn btn-link" style="font-size: 16px; margin-top: 100px;"><span class="glyphicon glyphicon-shopping-cart"></span> Add to cart</a>
             </div>
         }
     </div>
