--- a/Library.Web/Areas/Default/Views/Shared/_LoginPartial.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 {
     <form asp-area="Default" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
-            <li class="glyphicon glyphicon-option-vertical" style="font-size: 20px; color: gray; margin-top: 12px;"></li>
+            <li class="glyphicon glyphicon-option-vertical" style="font-size: 20px; color: dimgray; margin-top: 12px;"></li>
             <li>
                 <a asp-area="Default" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
@@ -21,7 +21,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li class="glyphicon glyphicon-option-vertical" style="font-size: 20px; color: gray; margin-top: 12px;"></li>
+        <li class="glyphicon glyphicon-option-vertical" style="font-size: 20px; color: dimgray; margin-top: 12px;"></li>
         <li><a asp-area="Default" asp-controller="Account" asp-action="Register">Register</a></li>
         <li><a asp-area="Default" asp-controller="Account" asp-action="Login">Log in</a></li>
     </ul>
