--- a/Library.Web/Areas/Admin/Views/Book/Add.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Add.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Library.Application.Commands.Books.AddBookCommand
+@using Library.DomainModel.Enums
 @{
     ViewData["Title"] = "Add book";
     Layout = "~/Areas/Default/Views/Shared/_Layout.cshtml";
@@ -31,8 +32,7 @@
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Genre, new { @class = "add-label" })
-                @Html.ValidationMessageFor(m => m.Genre, "", new { @class = "text-danger" })
-                @Html.TextBoxFor(m => m.Genre, new { @class = "form-control add-textbox" })
+                @Html.DropDownListFor(m => m.Genre, Html.GetEnumSelectList(typeof(Genre)), new { @class = "form-control"})
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Publisher, new { @class = "add-label" })
