--- a/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="Default" asp-controller="Books" asp-action="Index" class="navbar-brand">Library</a>
+                <a asp-area="" asp-controller="Books" asp-action="Index" class="navbar-brand">Library</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -36,7 +36,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/Admin/Book/Index"><span class="glyphicon glyphicon-list-alt"></span> View books</a></li>
+                                <li><a href="/Admin/Book"><span class="glyphicon glyphicon-list-alt"></span> View books</a></li>
                                 <li class="divider"></li>
                                 <li><a href="/Admin/Book/Add"><span class="glyphicon glyphicon-plus"></span> Add new book</a></li>
                             </ul>
