--- a/Library.Web/Areas/Default/Views/ShoppingCart/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/ShoppingCart/Index.cshtml
@@ -4,7 +4,7 @@
         <div class="panel panel-default">
             <div class="panel-body">
                 <p class="button">
-                    <a class="btn btn-primary" style="float:right" href="/Default/ShoppingCart/Checkout">Checkout</a>
+                    <a class="btn btn-primary" style="float:right" href="/ShoppingCart/Checkout">Checkout</a>
                 </p>
             </div>
         </div>
