--- a/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
@@ -55,8 +55,12 @@
         </div>
     </nav>
     <div class="container body-content">
-        @RenderBody()
-        <hr />
+        <div class="col-lg-12" style="margin-top: 20px;"></div>
+        <div class="content">
+            @RenderBody()
+        </div>
+    </div>
+    <div class="footer-color">
         <footer>
             <p>&copy; 2017 - Library</p>
         </footer>
