--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -4,18 +4,19 @@
     ViewData["Title"] = "Books";
     Layout = "~/Areas/Default/Views/Shared/_Layout.cshtml";
 }
-<div class="col-lg-12" style="margin-top: 20px;">
-    <div class="col-md-2">
+
+<div class="col-md-12 row">
+    <div class="col-md-3">
         <div class="form-group text-center" style="margin-top: 20px; margin-bottom: 20px;">
             <label style="color: black; font-family: Georgia; font-size: 14px;">Search by title</label>
             <input type="text" class="form-control" style="height: 20px; width:130px; display: inline-block; margin-left: 15px;" />
             <a href="#" class="btn btn-link" style="display:inline-block"><span class="glyphicon glyphicon-search" style="color: black; font-size: 20px;"></span></a>
         </div>
     </div>
-    <div class="col-md-10">
+    <div class="col-md-9">
         @foreach (var book in Model)
         {
-            <div class="col-md-9">
+            <div class="col-md-10">
                 <div class="col-md-12 book-row" style="margin-bottom: 20px;">
                     <div class="col-sm-7 properties-column">
                         <p>
@@ -54,8 +55,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1">
-                <a onclick="SendAddToCartCommand('@book.Id')" class="btn btn-link" style="font-size: 16px; margin-top: 100px;"><span class="glyphicon glyphicon-shopping-cart"></span> Add to cart</a>
+            <div class="col-md-2">
+                <a onclick="SendAddToCartCommand('@book.Id')" class="btn btn-link" style="font-size: 16px; margin-top: 100px; color: black;"><span class="glyphicon glyphicon-shopping-cart"></span> Add to cart</a>
             </div>
         }
     </div>
